fix overflow as i accidentally removed that

--- a/static_files/ghwikipp.css
+++ b/static_files/ghwikipp.css
@@ -16,6 +16,7 @@ body {
   max-width: 48em;
   line-height: 1.6em;
   font-size: 16px;
+  overflow-wrap: break-word;
 }
 
 img {
@@ -80,8 +81,13 @@ dt {
   font-style: italic;
 }
 
-dd {
-  margin-bottom: 0.5em;
+ul {
+  list-style-type: none;
+}
+
+li {
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 code {
